--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="camera">
                 <img style="width:60px;height:60px;" id="smallImage" src="img/rugby.jpg" />
                 <button id = "btnFoto">Capture Photo</button>
+                <button id = "btnDownload">Download file</button>
             </div>
         </div>
         <div data-role="footer" data-position="fixed">
