--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button id = "btnFoto">Capture Photo</button>
                 <button id = "btnDownload">Download file</button>
 		<div id="draggable" class="ui-widget-content">
-		  <p>Drag me around</p>
+		  <img src="img/timbro.png">
 		</div>
 
             </div>
