--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div role="main" class="ui-content" id="content-home">
 	    <div id="lblDesc"></div>
             <div id="camera">
+		<span id="lblXY"></span>
                 <img style="width:60px;height:60px;" id="smallImage" src="img/rugby.jpg" />
                 <button id = "btnFoto">Capture Photo</button>
                 <button id = "btnDownload">Download file</button>
